--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,16 @@ body, html {
     width: 100%;
     margin: 0;
     padding: 0;
+    font-family: helvetica,arial,sans-serif;
+}
+
+a {
+    text-decoration: none;
+    color: black;
+}
+
+a:hover {
+    text-decoration: underline;
 }
 
 #additional-aside-container {
@@ -68,6 +78,25 @@ body, html {
 
 }
 
+.footer-arrow-up {
+    position: relative;
+    bottom: 0.1em;
+}
+
+#footer-expand {
+    position: relative;
+    right: 2em;
+    font-size: 12px;
+}
+
+#footer-expand-container {
+    display: flex;
+    flex-direction: row;
+    position: relative;
+    align-items: center;
+    right: 6em;
+}
+
 #footer-links {
 
 }
@@ -80,8 +109,27 @@ body, html {
 
 }
 
-#footer-sub-bar {
+#footer-sub-ad h5 {
+    font-weight: 100;
+    font-size: 15px;
+    padding: 0;
+    margin: 0;
+}
 
+#footer-sub-bar {
+    background-color: #fff;
+    position: fixed;
+    bottom: 0px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    border-top: 1px solid black;
+    align-items: center;
+    height: 55px;
+    cursor: pointer;
 }
 
 .header-search {
@@ -119,7 +167,6 @@ body, html {
 #header-section-title {
     padding: 0;
     margin: 0;
-    font-family: helvetica,arial,sans-serif;
     position: relative;
     left: 4em;
 }
@@ -185,13 +232,25 @@ body, html {
 
 .ny-button {
     background-color: #567B95;
-    color: #fff;
     font-family: 'Franklin Gothic Medium', helvetica,arial,sans-serif;
     padding: 9px 12px 6px;
     border: 1px solid #354c5c;
     border-radius: 3px;
+    outline: none;
 }
 
+.ny-button a {
+    color: #fff;
+}
+
+.ny-button:active {
+    outline: auto;
+    outline-color: orange;
+}
+
+.ny-button:hover {
+    background-color: #3f6077;
+}
 
 .toolbar {
 
